--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "4.10.2",
+    "@material-ui/icons": "4.9.1",
     "@material-ui/styles": "4.10.0",
     "gatsby": "^2.21.37",
     "gatsby-image": "^2.4.4",
@@ -31,7 +32,8 @@
     "prismjs": "^1.20.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-share": "4.2.0"
   },
   "devDependencies": {
     "@testing-library/react": "10.0.4",
