--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-offline": "^3.2.3",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sharp": "^2.6.4",
+    "gatsby-remark-classes": "1.0.0",
     "gatsby-remark-copy-linked-files": "^2.3.2",
     "gatsby-remark-embed-video": "3.0.10",
     "gatsby-remark-images": "^3.3.4",
