--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@material-ui/core": "4.10.2",
     "@material-ui/icons": "4.9.1",
     "@material-ui/styles": "4.10.0",
-    "gatsby": "^2.21.37",
+    "gatsby": "2.29.3",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-feed": "^2.5.1",
     "gatsby-plugin-google-analytics": "^2.3.1",
@@ -19,7 +19,7 @@
     "gatsby-plugin-material-ui": "2.1.9",
     "gatsby-plugin-offline": "^3.2.3",
     "gatsby-plugin-react-helmet": "^3.3.1",
-    "gatsby-plugin-sharp": "^2.6.4",
+    "gatsby-plugin-sharp": "2.11.2",
     "gatsby-plugin-sitemap": "2.4.15",
     "gatsby-remark-classes": "1.0.0",
     "gatsby-remark-copy-linked-files": "^2.3.2",
@@ -39,10 +39,8 @@
   },
   "devDependencies": {
     "@testing-library/react": "10.0.4",
-    "babel-jest": "26.0.1",
     "babel-preset-gatsby": "0.4.7",
     "identity-obj-proxy": "3.0.0",
-    "jest": "26.0.1",
     "prettier": "2.0.5",
     "prop-types": "15.7.2",
     "react-test-renderer": "16.13.1"
