--- a/package.json
+++ b/package.json
@@ -11,29 +11,30 @@
     "@material-ui/core": "4.10.2",
     "@material-ui/icons": "4.9.1",
     "@material-ui/styles": "4.10.0",
-    "gatsby": "^2.21.37",
-    "gatsby-image": "^2.4.4",
-    "gatsby-plugin-feed": "^2.5.1",
-    "gatsby-plugin-google-analytics": "^2.3.1",
-    "gatsby-plugin-manifest": "^2.4.5",
+    "gatsby": "^2.32.11",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-feed": "^2.13.1",
+    "gatsby-plugin-google-analytics": "^2.11.0",
+    "gatsby-plugin-image": "^1.1.2",
+    "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-material-ui": "2.1.9",
-    "gatsby-plugin-offline": "^3.2.3",
-    "gatsby-plugin-react-helmet": "^3.3.1",
-    "gatsby-plugin-sharp": "^2.6.4",
+    "gatsby-plugin-offline": "^3.10.2",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sharp": "^2.14.3",
     "gatsby-plugin-sitemap": "2.4.15",
     "gatsby-remark-classes": "1.0.0",
-    "gatsby-remark-copy-linked-files": "^2.3.2",
+    "gatsby-remark-copy-linked-files": "^2.10.0",
     "gatsby-remark-embed-video": "3.0.10",
-    "gatsby-remark-images": "^3.3.4",
-    "gatsby-remark-prismjs": "^3.5.1",
-    "gatsby-remark-responsive-iframe": "^2.4.2",
-    "gatsby-remark-smartypants": "^2.3.1",
-    "gatsby-source-filesystem": "^2.3.4",
-    "gatsby-transformer-remark": "^2.8.9",
-    "gatsby-transformer-sharp": "^2.5.2",
-    "prismjs": "^1.20.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "gatsby-remark-images": "^3.11.1",
+    "gatsby-remark-prismjs": "^3.13.0",
+    "gatsby-remark-responsive-iframe": "^2.11.0",
+    "gatsby-remark-smartypants": "^2.10.0",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-transformer-remark": "^2.16.1",
+    "gatsby-transformer-sharp": "^2.12.1",
+    "prismjs": "^1.23.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^5.2.1",
     "react-share": "4.2.0"
   },
@@ -41,6 +42,7 @@
     "@testing-library/react": "10.0.4",
     "babel-jest": "26.0.1",
     "babel-preset-gatsby": "0.4.7",
+    "eslint-webpack-plugin": "^2.5.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.0.1",
     "prettier": "2.0.5",
