--- a/package.json
+++ b/package.json
@@ -40,11 +40,9 @@
   },
   "devDependencies": {
     "@testing-library/react": "10.0.4",
-    "babel-jest": "26.0.1",
     "babel-preset-gatsby": "0.4.7",
     "eslint-webpack-plugin": "^2.5.3",
     "identity-obj-proxy": "3.0.0",
-    "jest": "26.0.1",
     "prettier": "2.0.5",
     "prop-types": "15.7.2",
     "react-test-renderer": "16.13.1"
@@ -66,7 +64,6 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "jest"
+    "clean": "gatsby clean"
   }
 }
