--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-share": "4.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
     "@testing-library/react": "10.0.4",
     "babel-preset-gatsby": "0.4.7",
     "eslint-webpack-plugin": "^2.5.3",
