--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/Developero-oficial/blog/issues"
   },
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^3.3.0",
     "@material-ui/core": "4.10.2",
     "@material-ui/icons": "4.9.1",
     "@material-ui/styles": "4.10.0",
@@ -17,7 +18,7 @@
     "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-image": "^1.1.2",
     "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-material-ui": "2.1.9",
+    "gatsby-plugin-material-ui": "^2.1.9",
     "gatsby-plugin-offline": "^3.10.2",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.3",
@@ -25,6 +26,7 @@
     "gatsby-remark-classes": "1.0.0",
     "gatsby-remark-copy-linked-files": "^2.10.0",
     "gatsby-remark-embed-video": "3.0.10",
+    "gatsby-remark-highlight-code": "^3.0.0",
     "gatsby-remark-images": "^3.11.1",
     "gatsby-remark-prismjs": "^3.13.0",
     "gatsby-remark-responsive-iframe": "^2.11.0",
